# GSAreport

./: .gitignore  404.html  LICENSE.md  README.md  doc-requirements.txt  dockerfile  experiment.py  index.html  interactive.ipynb  main.ipynb  mkdocs.yml  mkgendocs.yml  mse-all.csv  mse-low.csv  paper.bib  paper.md  pyproject.toml  requirements.txt  sa-report.py  table.ipynb  versions.json
.github/workflows/: linter.yml  package.yml  publish.yml
1.0/: 404.html  index.html  sitemap.xml
1.0.1/: 404.html
1.0.1/installation/: index.html
1.0.1/license/: index.html
1.0.1/references/: index.html
1.0.1/search/: search_index.json
1.0.1/usecases/: index.html
1.0/contributing/: index.html
1.0/installation/: index.html
1.0/license/: index.html
1.0/references/: index.html
1.0/search/: search_index.json
1.0/usecases/: index.html
1.3.0/: 404.html  index.html  sitemap.xml
1.3.0/license/: index.html
contributing/: index.html
data/: problem.json  x_lhs.csv  x_morris.csv  y_lhs.csv  y_morris.csv  y_sobol.csv
example-report/: example.html
installation/: index.html
paper experiments/: exp2.py  exp2_plot.py  experiment.py  mae.csv  mse-all.csv  plot.py  requirements.txt  table.ipynb
plotting/: __init__.py  interactive_plots.py  plotting.py
references/: index.html
search/: search_index.json
site/: 404.html
src/: GSAreport.py  GSAreport.spec  gsa-logo.psd  plots.ipynb  requirements.txt
template/: fast.html  index.html  interactive1.html  interactive2.html  morris1.html  pawn.html
tests/: test_model.py  test_sampling.py
usecases/: index.html
(+40 files in other folders)
