# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GSAreport"
version = "1.1.0"
description = "Global Sensitivity Reporting"
readme = "README.md"
authors = [{ name = "Bas van Stein", email = "b.van.stein@liacs.leidenuniv.nl" }]
license = { file = "LICENSE.md" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["sensitivity analysis", "explainable ai"]
dependencies = [
    'scikit-learn',
    'numpy',
    'bokeh',
    'SALib',
    'pandas',
    'matplotlib',
    'shap'
]

requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["black", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/Basvanstein/GSAreport"